Update to Firefox 89

--- a/manifest.json
+++ b/manifest.json
@@ -2,40 +2,42 @@
     "manifest_version": 2,
     "version": "1.0",
     "name": "One Half",
+    "description": "One Half Theme for Firefox",
     "theme": {
         "colors": {
-            "toolbar": "#fafafa",
-            "toolbar_text": "#383a42",
-            "frame": "#282c34",
-            "toolbar_field": "#fafafa",
-            "toolbar_field_text": "#383a42",
-            "popup": "#fafafa",
-            "popup_text": "#383a42",
-            "icons": "#383a42",
-            "tab_background_separator": "#383a42",
-            "tab_background_text": "#dcdfe4",
-            "tab_selected": "#fafafa",
-            "tab_text": "#383a42",
-            "tab_loading": "#50a14f",
-            "tab_line": "#50a14f"
+            "toolbar": "rgb(250, 250, 250)",
+            "toolbar_text": "rgb(56, 58, 66)",
+            "frame": "rgb(33, 37, 43)",
+            "tab_background_text": "rgb(149, 154, 157)",
+            "toolbar_field": "rgb(255, 255, 255)",
+            "toolbar_field_text": "rgb(56, 58, 66)",
+            "tab_line": "rgb(56, 58, 66)",
+            "popup": "rgb(250, 250, 250)",
+            "popup_text": "rgb(56, 58, 66)",
+            "icons_attention": "rgb(1, 132, 188)",
+            "popup_border": "rgb(250, 250, 250)",
+            "tab_loading": "rgb(1, 132, 188)",
+            "toolbar_bottom_separator": "rgb(250, 250, 250)",
+            "toolbar_top_separator": "rgb(250, 250, 250)"
         }
     },
     "dark_theme": {
         "colors": {
-            "toolbar": "#282c34",
-            "toolbar_text": "#dcdfe4",
-            "frame": "#282c34",
-            "toolbar_field": "#21252b",
-            "toolbar_field_text": "#dcdfe4",
-            "popup": "#21252b",
-            "popup_text": "#dcdfe4",
-            "icons": "#dcdfe4",
-            "tab_background_separator": "#dcdfe4",
-            "tab_background_text": "#dcdfe4",
-            "tab_selected": "#282c34",
-            "tab_text": "#dcdfe4",
-            "tab_loading": "#98c379",
-            "tab_line": "#98c379"
+            "toolbar": "rgb(40, 44, 52)",
+            "toolbar_text": "rgb(220, 223, 228)",
+            "frame": "rgb(33, 37, 43)",
+            "tab_background_text": "rgb(149, 154, 157)",
+            "toolbar_field": "rgb(33, 37, 43)",
+            "toolbar_field_text": "rgb(220, 223, 228)",
+            "tab_line": "rgba(255, 255, 255, 0)",
+            "popup": "rgb(33, 37, 43)",
+            "popup_text": "rgb(220, 223, 228)",
+            "icons_attention": "rgb(97, 175, 239)",
+            "popup_border": "rgb(33, 37, 43)",
+            "tab_loading": "rgb(97, 175, 239)",
+            "toolbar_bottom_separator": "rgb(40, 44, 52)",
+            "toolbar_field_border": "rgb(33, 37, 43)",
+            "toolbar_top_separator": "rgb(40, 44, 52)"
         }
     }
 }
